@@ -8,9 +8,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3435</build>
+	<build>Build 3445</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>18.10.2007 - 02:22</release_date>
+	<release_date>21.10.2007 - 03:45</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
